Fixes color inconsistencies. Adds global color variables that align more strictly with UVA brand guidelines.

--- a/frontend/src/app/border-box-tile/border-box-tile.component.scss
+++ b/frontend/src/app/border-box-tile/border-box-tile.component.scss
@@ -45,7 +45,7 @@
 
     &:before {
       border: 11px solid #dadada;
-      border-image: linear-gradient(to bottom, $brand-gray 0%, #f1f1ef 100%);
+      border-image: linear-gradient(to bottom, $brand-gray-tint-2 0%, $brand-gray-tint-3 100%);
       border-image-slice: 1;
       opacity: 1;
     }
