--- a/frontend/src/stardrive_material.scss
+++ b/frontend/src/stardrive_material.scss
@@ -143,12 +143,12 @@
     margin-bottom: 2em;
 
     &.alert-info {
-      background-color: mat-color($stardrive-primary, 50, 1);
+      background-color: $brand-primary-light;
       color: black;
     }
 
     &.alert-warn {
-      background-color: mat-color($stardrive-warn, 900, 1);
+      background-color: $brand-warning;
       color: white;
     }
   }
